added working dropdowns with custom inputs

--- a/client/src/components/new-recipe-page/item-form/item-form.module.scss
+++ b/client/src/components/new-recipe-page/item-form/item-form.module.scss
@@ -10,3 +10,12 @@
 }
 .add-recipe-item {
 }
+
+
+.recipe-dropdowns{
+  display: grid;
+  grid-auto-flow: column;
+  grid-gap: 1rem;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
