--- a/client/src/components/update-recipe-page/update-item-wrapper/update-item-wrapper.module.scss
+++ b/client/src/components/update-recipe-page/update-item-wrapper/update-item-wrapper.module.scss
@@ -4,3 +4,10 @@
 }
 .delete-recipe {
 }
+.recipe-genre-dropdown{
+    display: grid;
+    grid-auto-flow: column;
+    grid-gap: 1rem;
+    justify-content: center;
+    margin-bottom: 1rem;
+  }
