--- a/client/src/components/new-recipe-page/item-form/item-form.module.scss
+++ b/client/src/components/new-recipe-page/item-form/item-form.module.scss
@@ -12,10 +12,10 @@
 }
 
 
-.recipe-dropdowns{
-  display: grid;
-  grid-auto-flow: column;
-  grid-gap: 1rem;
-  justify-content: center;
-  margin-bottom: 1rem;
-}
+// .recipe-dropdowns{
+//   display: grid;
+//   grid-auto-flow: column;
+//   grid-gap: 1rem;
+//   justify-content: center;
+//   margin-bottom: 1rem;
+// }
