--- a/client/src/components/util-components/imageupload.module.scss
+++ b/client/src/components/util-components/imageupload.module.scss
@@ -1,18 +1,49 @@
-.image-container {
-    width: 100%;
-    max-width: 300px; 
-    height: 300px;
-    border: 1px solid #ccc;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
 
-  }
-  
-  .image {
+.initial-image{
     width: 100%;
     height: 100%;
     object-fit: cover;
-  }
+    border-radius: 15px 15px 0 0;
+}
+
+.image-preview-container{
+    display: grid;
+    grid-auto-flow: column;
+    grid-gap: 1rem;
+    justify-content: center;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+}
+
+.current-image{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 15px 15px 0 0;
+}
+
+.image-preview-controls{
+    display: grid;
+    grid-auto-flow: column;
+    grid-gap: 1rem;
+    justify-content: center;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+}
+
+.image-preview{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 15px 15px 0 0;
+}
+
+.image-upload{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+}
+
