--- a/client/src/components/util-components/imagecycle.module.scss
+++ b/client/src/components/util-components/imagecycle.module.scss
@@ -15,7 +15,7 @@
     width: 100%;
     height: 600px;
     object-fit: scale-down;
-    margin: 1rem;
+
 
 }
 
@@ -28,6 +28,8 @@
     align-items: center;
     justify-content: center;
     padding: 4rem;
+    margin-left: auto;
+    margin-right: auto;
   
 }
 
@@ -38,8 +40,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+   
     border: 5px solid #e2bd98;
     background-color: #e7e6de;
+
    
  
 
