--- a/client/src/components/util-components/imageupload.module.scss
+++ b/client/src/components/util-components/imageupload.module.scss
@@ -1,25 +1,39 @@
 
+
+
 .initial-image{
+
+  
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 15px 15px 0 0;
+    height: 600px;
+    object-fit: scale-down;
+   
 }
 
 .image-preview-container{
+    width: 700px;
+  
     display: grid;
     grid-auto-flow: column;
     grid-gap: 1rem;
     justify-content: center;
-    margin-bottom: 1rem;
+    margin-bottom: 4em;
+    padding-bottom: 8rem;
     margin-top: 1rem;
+    box-shadow: 0 0 10px 0 rgba(0,0,0,.75);
+    position: relative;
+
+    
 }
 
 .current-image{
+
+    // display: block;
+    margin: auto;
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 15px 15px 0 0;
+    height: 600px;
+    object-fit: scale-down;
+    margin: 1rem;
 }
 
 .image-preview-controls{
@@ -29,6 +43,12 @@
     justify-content: center;
     margin-bottom: 1rem;
     margin-top: 1rem;
+    // background-color: red;
+  position: absolute;
+    bottom: 0px;
+    left: 0;
+    right: 0;
+
 }
 
 .image-preview{
@@ -43,7 +63,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
+   
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+    border-left: 5px solid #e2bd98;
+    border-right: 5px solid #e2bd98;
+    
+    background-color: #e7e6de;
 }
 
