--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,11 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+ 
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   background-color: #242424;
 
   font-synthesis: none;
@@ -42,15 +43,16 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  padding: 1rem;
+  border: 5px solid #e2bd98;
+  border-radius: 5px;
+  background-color: #e7e6de;
+  color: #bd6160;
+  font-size: 1.5rem;
+  font-weight: 400;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: background-color 300ms;
+  
 }
 button:hover {
   border-color: #646cff;
@@ -71,4 +73,18 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+
+.input-box{
+  margin: 1rem;
+  padding: 1.75rem;
+  background-color: #e7e6de;
+  border-radius: 10px;
+  border: 5px solid #e2bd98;
+  color: #bd6160;
+  font-size: 1.5rem;
+}
+.input-box::placeholder{
+  color: #bd6160;
 }
