--- a/client/src/components/util-components/imagecycle.module.scss
+++ b/client/src/components/util-components/imagecycle.module.scss
@@ -57,3 +57,9 @@
     padding: 1rem;
 }
 
+.socialTheme{
+    .image-container{
+        border: 5px solid #344966;
+        background-color: #F0F4EF;
+    }
+}
