--- a/client/src/components/home-page/home-page.module.scss
+++ b/client/src/components/home-page/home-page.module.scss
@@ -1,38 +1,4 @@
-// return (
-//     <div className={classNames(styles.root, className)}>
-//         <div>
-//             <RecipeCard recipes={recipes} onRecipeDelete={onRecipeDelete} user_id={user_id} />
-//         </div>
-//         <div className={styles['pagination-container']}>
-//             <button
-//                 onClick={goToPreviousPage}
-//                 className={styles['pagination-button']}
-//                 disabled={currentPage === 1}
-//             >
-//                 Previous
-//             </button>
-//             {Array.from({ length: totalPages }).map((_, index) => (
-//                 <button
-//                     key={index + 1}
-//                     onClick={() => goToPage(index + 1)}
-//                     className={classNames(styles['pagination-button'], {
-//                         [styles['pagination-button-active']]: index + 1 === currentPage,
-//                     })}
-//                 >
-//                     {index + 1}
-//                 </button>
-//             ))}
-//             <button
-//                 onClick={goToNextPage}
-//                 className={styles['pagination-button']}
-//                 disabled={currentPage === totalPages}
-//             >
-//                 Next
-//             </button>
-//         </div>
-//     </div>
-// );
-// };
+
 .root{
     display: flex;
     flex-direction: column;
@@ -52,4 +18,24 @@
     border: 5px solid #e2bd98;
     position: sticky;
    
+  }
+  .pagination-button-active{
+    margin: 0.5rem;
+    padding: 0.5rem;
+    background-color: #bd6160;
+    color: black;
+    border-radius: 10px;
+    border: 5px solid #e2bd98;
+    position: sticky;
+    :hover{
+        cursor: pointer;
+    }
+  }
+  
+  .pagination-ellipsis{
+    /* Add your custom styles for the ellipsis buttons here */
+    font-weight: bold; /* For example, make the ellipsis bold */
+    color: gray;
+    margin: 0.1rem;
+ 
   }
