--- a/client/src/components/recipe-card/recipe-card.module.scss
+++ b/client/src/components/recipe-card/recipe-card.module.scss
@@ -1,10 +1,9 @@
 
-
-.recipe-card{
+.root{
     border: 1rem solid #1c685e;
     border-radius: 15px;
     box-shadow: 0 0 10px 0 rgba(0,0,0,.75);
-}
+
 
 .recipe-card h2 {   
     margin: 0;
@@ -93,16 +92,16 @@ ul.recipe-card-ingredients {
     background-color: #e7e6de;  
     overflow-wrap: break-word;
 }
+}
 
-.socialTheme{
 
 
-    .recipe-card{
+
+    .socialTheme {
+
         border: 1rem solid #344966;
         border-radius: 15px;
         box-shadow: 0 0 10px 0 rgba(0,0,0,.75);
-    }
-    
     .recipe-card h2 {   
         margin: 0;
         font-size: 5rem;
@@ -119,7 +118,8 @@ ul.recipe-card-ingredients {
     .recipe-card-li{
         margin: 0;
         list-style-type: none;
-        border: 5px solid #B4CDED;
+       
+        border: 5px solid  #B4CDED; 
         background-color: #F0F4EF; 
         border-radius: 15px 15px 15px 15px;
     }
@@ -191,5 +191,106 @@ ul.recipe-card-ingredients {
         overflow-wrap: break-word;
     }
     
+
+    }
+
     
-}
+    .profileTheme {
+        border: 0.5rem solid black;
+        border-radius: 10px;
+        box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.75);
+   
+  
+        .recipe-card h2 {
+            margin: 0;
+            font-size: 3rem; /* Reduced font size */
+            font-weight: 400;
+            color: #bd6160;
+            text-align: center;
+            border: 3px solid #e2bd98; /* Reduced border width */
+            background-color: #e7e6de;
+            padding: 0.5rem; /* Reduced padding */
+            border-radius: 7px 7px 0 0; /* Reduced border radius */
+            max-width: 350px; /* Reduced max width */
+            overflow-wrap: break-word;
+        }
+    
+        .recipe-card-li {
+            margin: 0;
+            list-style-type: none;
+            border: 3px solid #e2bd98;
+            background-color: #e7e6de;
+            border-radius: 10px; /* Reduced border radius */
+        }
+    
+        .recipe-card-header {
+            display: grid;
+            grid-auto-flow: column;
+            justify-content: space-between;
+            background-color: #e7e6de;
+            border-radius: 7px 7px 0 0; /* Reduced border radius */
+            padding: 0.5rem; /* Reduced padding */
+        }
+    
+        ul.recipe-card-ingredients li:nth-child(odd) {
+            background-color: #e2bd98;
+            margin: 0;
+            color: #bd6160;
+        }
+    
+        ul.recipe-card-ingredients li:nth-child(even) {
+            background-color: #e7e6de;
+            margin: 0;
+            color: #bd6160;
+        }
+    
+        ul.recipe-card-ingredients {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            font-size: 1.2rem; /* Reduced font size */
+            font-weight: 400;
+            color: #bd6160;
+            text-align: center;
+            border: 3px solid #e2bd98;
+            background-color: #e7e6de;
+            padding: 0.5rem; /* Reduced padding */
+            margin: 0;
+        }
+    
+        .recipe-card-line-separator {
+            border: 5px solid #e2bd98; /* Reduced border width */
+        }
+    
+        .recipe-card-content {
+            background-color: #d17f74;
+        }
+    
+        .recipe-card-buttons {
+            display: grid;
+            grid-auto-flow: column;
+            grid-gap: 0.5rem; /* Reduced gap between buttons */
+            justify-content: end;
+            padding: 0.5rem; /* Reduced padding */
+        }
+    
+        .recipe-card-item {
+            margin: 0;
+        }
+    
+        .recipe-card-bottom {
+            border-radius: 0 0 7px 7px; /* Reduced border radius */
+            border: 0.5rem solid #d17f74; /* Reduced border width */
+        }
+    
+        .recipe-card-description {
+            margin: 0;
+            font-size: 1.2rem; /* Reduced font size */
+            color: #bd6160;
+            text-align: start;
+            max-width: 500px; /* Reduced max width */
+            background-color: #e7e6de;
+            overflow-wrap: break-word;
+        }
+    }
+    
