--- a/client/src/components/util-components/imagecycle.module.scss
+++ b/client/src/components/util-components/imagecycle.module.scss
@@ -1,3 +1,17 @@
+
+.root{
+
+    height: 700px;
+    width: 900px;
+    display: flex;
+       flex-direction: column;
+       align-items: center;
+       justify-content: center;
+       padding: 4rem;
+       margin-left: auto;
+       margin-right: auto;
+     
+   
 .button-container button {
     padding: 1rem;
     border: 5px solid #e2bd98;
@@ -11,7 +25,7 @@
   }
 .current-image{
     display: block;
-    margin: auto;
+    margin: 2rem;
     width: 100%;
     height: 600px;
     object-fit: scale-down;
@@ -19,19 +33,6 @@
 
 }
 
-.root{
-
- height: 700px;
- width: 900px;
- display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 4rem;
-    margin-left: auto;
-    margin-right: auto;
-  
-}
 
 .image-container{
     height: 750px;
@@ -56,10 +57,41 @@
     justify-content: center;
     padding: 1rem;
 }
+}
+
+
 
 .socialTheme{
+
     .image-container{
         border: 5px solid #344966;
         background-color: #F0F4EF;
     }
+}
+
+.profileTheme{
+    height: 300px;
+    width: 400px;
+    display: flex;
+       flex-direction: column;
+       align-items: center;
+       justify-content: center;
+       padding: 4rem;
+       margin-left: auto;
+       margin-right: auto;
+     
+  
+    .image-container{
+        border: 5px solid black;
+        background-color: #e7e6de;
+        max-height: 350px;
+        max-width: 400px;
+     
+    }
+    .current-image{
+        height: 250px;
+        width: 300px;
+    }
+
+
 }
